[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/items/ItemsTextureMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/items/Item.gd" type="Script" id=2]
[ext_resource path="res://ui/items/items_sounds/keys.wav" type="AudioStream" id=3]
[ext_resource path="res://ui/hud/hud_item_hover.png" type="Texture" id=4]
[ext_resource path="res://ui/hud/hud_item_background.png" type="Texture" id=5]
[ext_resource path="res://ui/items/items_sounds/tool.wav" type="AudioStream" id=6]
[ext_resource path="res://ui/items/items_sounds/pad_module.wav" type="AudioStream" id=7]

[node name="Item" type="TextureButton"]
pause_mode = 2
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="ItemShade" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )

[node name="ItemHover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="ItemTexture" parent="." instance=ExtResource( 1 )]

[node name="Sounds" type="Node2D" parent="."]

[node name="Keys" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Tool" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="PadModule" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_Item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item_mouse_exited"]
